updated file and ready

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
 <section>
 <h2>Description</h2>
-<p>
-Alfredo pasta is a creamy and comforting dish made with pasta, butter, cream, and Parmesan cheese. </p>
+<p>Alfredo pasta is a creamy and comforting dish made with pasta, butter, cream, and Parmesan cheese. </p>
 <p>It is widely enjoyed because it is simple to prepare and requires only a few basic ingredients that are commonly available in most kitchens. The rich and smooth sauce coats the pasta evenly, giving the dish a mild yet satisfying flavor that appeals to many people.</p>
 <p>Chicken Alfredo is a popular variation that includes cooked chicken added to the pasta. The chicken increases the protein content of the meal, making it more filling and nutritious.</p>
 <p>This addition also enhances the overall flavor and texture of the dish. As a result, Chicken Alfredo is often served as a complete and hearty meal for lunch or dinner and remains a favorite comfort food for many.</p>
@@ -49,13 +48,16 @@ Alfredo pasta is a creamy and comforting dish made with pasta, butter, cream, an
 
 <section>
 <h2>Finished Dish</h2>
-<img src="image.jpg" alt="Chicken Alfredo Pasta" width="300"height="250">
+<img src="pastaalferdo.image.jpg" alt="Chicken Alfredo Pasta" width="300"height="250">
 <p>
 Image source:
 <a href="https://unsplash.com/">Unsplash</a>
 </p>
 </section>
-
+<section>
+<a href="https://en.wikipedia.org/wiki/Fettuccine_Alfredo">the alferdo pasta recipe source</a>
+</p>
+</section>
 </main>
 
 </body>
