--- a/index.html
+++ b/index.html
@@ -25,40 +25,41 @@
 <h2>Ingredients</h2>
 <ul>
 <li>200 g fettuccine pasta</li>
- <li>2 chicken breasts</li>
- <li>1 cup heavy cream</li>
- <li>2 cloves garlic</li>
- <li>1/2 cup grated Parmesan cheese</li>
+<li>2 chicken breasts</li>
+<li>1 cup heavy cream</li>
+<li>2 cloves garlic</li>
+<li>1/2 cup grated Parmesan cheese</li>
 <li>2 tablespoons butter</li>
- <li>Salt and pepper to taste</li>
+<li>Salt and pepper to taste</li>
 </ul>
 </section>
 
 <section>
- <h2>Instructions</h2>
+<h2>Instructions</h2>
 <ol>
-  <li>Boil pasta according to package instructions.</li>
+<li>Boil pasta according to package instructions.</li>
 <li>Cook chicken in a pan until fully cooked.</li>
 <li>Melt butter and sauté garlic.</li>
 <li>Add cream and Parmesan cheese.</li>
 <li>Mix pasta and chicken with the sauce.</li>
- <li>Serve warm.</li>
+<li>Serve warm.</li>
 </ol>
 </section>
 
 <section>
 <h2>Finished Dish</h2>
-<img src="pastaalferdo.image.jpg" alt="Chicken Alfredo Pasta" width="300"height="250">
+<img src="pastaalferdo.image.jpg" alt="Chicken Alfredo Pasta" width="300"  height="250">
 <p>
-Image source:
-<a href="https://unsplash.com/">Unsplash</a>
+  Image source:
+  <a href="https://unsplash.com/">Unsplash</a>
 </p>
 </section>
 <section>
-<a href="https://en.wikipedia.org/wiki/Fettuccine_Alfredo">the alferdo pasta recipe source</a>
-</p>
+<a href="https://en.wikipedia.org/wiki/Fettuccine_Alfredo">The Alfredo Pasta Recipe Source</a>
 </section>
 </main>
-
+<footer>
+<p>Created by Ghazal Azarnia</p>
+</footer>
 </body>
 </html>
