--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
 <section>
 <h2>Ingredients</h2>
 <ul>
-<li>200 g fettuccine pasta</li>
-<li>2 chicken breasts</li>
-<li>1 cup heavy cream</li>
-<li>2 cloves garlic</li>
-<li>1/2 cup grated Parmesan cheese</li>
-<li>2 tablespoons butter</li>
-<li>Salt and pepper to taste</li>
+   <li>200 g fettuccine pasta</li>
+  <li>2 chicken breasts</li>
+  <li>1 cup heavy cream</li>
+  <li>2 cloves garlic</li>
+  <li>1/2 cup grated Parmesan cheese</li>
+  <li>2 tablespoons butter</li>
+  <li>Salt and pepper to taste</li>
 </ul>
 </section>
 
 <section>
 <h2>Instructions</h2>
 <ol>
-<li>Boil pasta according to package instructions.</li>
-<li>Cook chicken in a pan until fully cooked.</li>
-<li>Melt butter and sauté garlic.</li>
-<li>Add cream and Parmesan cheese.</li>
-<li>Mix pasta and chicken with the sauce.</li>
-<li>Serve warm.</li>
+   <li>Boil pasta according to package instructions.</li>
+   <li>Cook chicken in a pan until fully cooked.</li>
+   <li>Melt butter and sauté garlic.</li>
+   <li>Add cream and Parmesan cheese.</li>
+   <li>Mix pasta and chicken with the sauce.</li>
+   <li>Serve warm.</li>
 </ol>
 </section>
 
@@ -55,7 +55,12 @@
 </p>
 </section>
 <section>
-<a href="https://en.wikipedia.org/wiki/Fettuccine_Alfredo">The Alfredo Pasta Recipe Source</a>
+  <h2>Recipe Source</h2>
+  <p>
+  <a href="https://en.wikipedia.org/wiki/Fettuccine_Alfredo">
+  The Alfredo Pasta Recipe Source
+  </a>
+  </p>
 </section>
 </main>
 <footer>
